# AiEngineer

./: .env  README.md  check_files.py  docker-compose.yml
AiAgents/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
AiAgents/examples/: 01_single_react_agent.py  02_multi_agent_supervisor.py  03_human_in_loop.py  04_mcp_client_agent.py  05_a2a_communication.py  06_rag_agent.py  07_plan_and_execute.py  08_guardrails_demo.py
AiAgents/src/: __init__.py
AiAgents/src/a2a/: a2a_client.py
AiAgents/src/agents/: base_agent.py
AiAgents/src/agents/crm/: crm_agent.py
AiAgents/src/agents/faq/: faq_agent.py
AiAgents/src/agents/feedback/: feedback_agent.py
AiAgents/src/agents/graph_rag/: graph_rag_agent.py
AiAgents/src/agents/guardrail/: guardrail_agent.py
AiAgents/src/agents/handoff/: handoff_agent.py
AiAgents/src/agents/intent/: intent_agent.py
AiAgents/src/agents/rag/: rag_agent.py
AiAgents/src/api/: __init__.py  app.py
AiAgents/src/config/: __init__.py  llm_providers.py  settings.py
AiAgents/src/graphs/: hierarchical_graph.py  map_reduce_graph.py  multi_agent_graph.py  multi_agent_react_graph.py  plan_execute_graph.py  single_agent_graph.py
AiAgents/src/guardrails/: action_validator.py  hallucination_detector.py  hallucination_recovery.py  input_validator.py  output_validator.py  safety_config.py
AiAgents/src/human_in_loop/: approval_workflow.py  interrupt_handler.py
AiAgents/src/mcp_client/: client.py  config.py  tool_adapter.py
AiAgents/src/memory/: checkpointer.py  conversation_memory.py  long_term_memory.py
AiAgents/src/models/: schemas.py  state.py
AiAgents/src/prompts/: chain_of_thought.py  few_shot.py  prompt_templates.py  structured_output.py
AiAgents/src/utils/: logger.py  tracing.py
AiAgents/tests/: test_agents.py  test_graphs.py  test_guardrails.py  test_mcp_client.py  test_memory.py
GenAISystem/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
GenAISystem/examples/: 01_basic_rag.py  02_hybrid_rag.py  03_graph_rag.py  04_agentic_rag.py  05_evaluation.py  06_full_pipeline.py
GenAISystem/src/agentic_rag/: adaptive_rag.py  corrective_rag.py  rag_graph.py  self_rag.py
GenAISystem/src/api/: app.py  ingestion_api.py  rag_api.py
GenAISystem/src/config/: settings.py
GenAISystem/src/embeddings/: batch_embedder.py  embedding_cache.py  embedding_factory.py  factory.py
GenAISystem/src/evaluation/: custom_metrics.py  evaluation_pipeline.py  ragas_evaluator.py
GenAISystem/src/generation/: citation_handler.py  response.py  response_generator.py  streaming_response.py
GenAISystem/src/ingestion/: data_loader.py  pipeline.py
GenAISystem/src/ingestion/chunking/: agentic_chunker.py  document_chunker.py  recursive_chunker.py  semantic.py  semantic_chunker.py
GenAISystem/src/ingestion/preprocessing/: metadata_extractor.py  text_cleaner.py
GenAISystem/src/knowledge_graph/: entity_extractor.py  graph_builder.py  graph_retriever.py  graph_visualizer.py  neo4j_client.py  triplet_generator.py
GenAISystem/src/retrieval/: fusion.py  hybrid.py  hybrid_retriever.py  keyword_retriever.py  llm_reranker.py  query_router.py  reranker.py  semantic_cache.py  vector_retriever.py
GenAISystem/src/vectorstores/: base_store.py  chromadb_store.py  factory.py  faiss_store.py  pinecone_store.py  qdrant_store.py  store_factory.py
GenAISystem/tests/: __init__.py  test_embeddings.py  test_evaluation.py  test_ingestion.py  test_knowledge_graph.py  test_retrieval.py  test_vectorstores.py
MCPServer/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
MCPServer/scripts/: run_all_servers.py  test_with_inspector.sh
MCPServer/src/backend_api/: app.py
MCPServer/src/backend_api/middleware/: __init__.py  auth.py  logging_middleware.py  rate_limiter.py
MCPServer/src/backend_api/models/: __init__.py  request_response.py
MCPServer/src/backend_api/routes/: data.py  files.py  search.py
MCPServer/src/config/: settings.py
MCPServer/src/gateway/: a2a_server.py  agent_card.py  unified_server.py
MCPServer/src/servers/api_integration/: server.py
MCPServer/src/servers/calculator/: server.py
MCPServer/src/servers/crm/: __init__.py  server.py
MCPServer/src/servers/database/: server.py
MCPServer/src/servers/faq/: __init__.py  server.py
MCPServer/src/servers/feedback/: __init__.py  server.py
MCPServer/src/servers/handoff/: server.py  (+1 more)
MCPServer/src/shared/: error_handler.py  tool_registry.py  validators.py
MCPServer/tests/: __init__.py  test_api.py  test_database.py  test_gateway.py  test_web_search.py
(+8 files in other folders)
