[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Production-grade multi-agent orchestration with LangGraph, MCP, and A2A protocols"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LangGraph & LangChain core
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    # LLM Providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    # MCP
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    # A2A
    "a2a-sdk>=0.1.0",
    # Config & Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    # Memory & Storage
    "faiss-cpu>=1.7.4",
    "qdrant-client>=1.11.0",
    # Observability
    "langsmith>=0.1.0",
    "langfuse>=2.0.0",
    # Async
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
