[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-system"
version = "0.1.0"
description = "Hybrid RAG Pipeline with Document Chunking, Vector Stores, and Knowledge Graph (Neo4j)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core RAG / Orchestration
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    
    # LLM Providers (lazy-imported based on config)
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    
    # Text Processing & Chunking
    "langchain-text-splitters>=0.3.0",
    "langchain-experimental>=0.3.0",
    "unstructured[all-docs]>=0.14.0",
    "tiktoken>=0.7.0",
    
    # Embeddings & Vector Stores
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.4",
    "qdrant-client>=1.11.0",
    "langchain-qdrant>=0.1.0",
    "langchain-pinecone>=0.2.0",
    "pinecone>=5.0.0",
    
    # Knowledge Graph
    "neo4j>=5.20.0",
    "langchain-neo4j>=0.1.0",
    
    # API & Serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    
    # Utils
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    
    # Evaluation
    "ragas>=0.1.0",

    # Hybrid Search & Caching
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
